test/scc/decl/semantic-errors/071.a
071.t:1:22: error: invalid storage class for parameter 'a'